# tutor-contrib-thealphabetalab-branding

./: .gitignore  .hatch_build.py  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  package.json  pyproject.toml
requirements/: local.txt
thealphabetalab_branding/: plugin.py
thealphabetalab_branding/patches/: mfe-lms-common-settings  openedx-common-settings
